Fix minio secret data key name
Signed-off-by: Andy Goldstein <andy.goldstein@gmail.com>

--- a/examples/minio/00-minio-deployment.yaml
+++ b/examples/minio/00-minio-deployment.yaml
@@ -76,7 +76,7 @@ metadata:
   labels:
     component: minio
 stringData:
-  credentials-ark: |
+  cloud: |
     [default]
     aws_access_key_id = minio
     aws_secret_access_key = minio123
