--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ _obj
 _test
 _output
 
+# Generated examples
+/examples/yaml/generated/*.txt
+/examples/yaml/generated/*.yaml
+
 # Architecture specific extensions/prefixes
 *.[568vq]
 [568vq].out
