--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -73,7 +73,7 @@ required = [
 
 [[constraint]]
   name = "github.com/stretchr/testify"
-  version = "1.1.4"
+  branch = "master"
 
 [[constraint]]
   branch = "master"
