--- a/examples/common/00-prereqs.yaml
+++ b/examples/common/00-prereqs.yaml
@@ -104,30 +104,6 @@ metadata:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRole
-metadata:
-  name: ark
-  labels:
-    component: ark
-rules:
-  - apiGroups:
-      - "*"
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-    resources:
-      - "*"
-  - apiGroups:
-      - apiextensions.k8s.io
-    verbs:
-      - create
-    resources:
-      - customresourcedefinitions
-
----
-apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
   name: ark
@@ -139,7 +115,7 @@ subjects:
     name: ark
 roleRef:
   kind: ClusterRole
-  name: ark
+  name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
 
 ---
