Restore ca-certificates to image
Signed-off-by: Andy Goldstein <andy.goldstein@gmail.com>

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,6 +1,4 @@
-# Copyright 2016 The Kubernetes Authors.
-#
-# Modifications Copyright 2017 the Heptio Ark contributors.
+# Copyright 2017 the Heptio Ark project contributors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,11 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM ARG_FROM
+FROM alpine:3.6
 
 MAINTAINER Andy Goldstein <andy@heptio.com>
 
-ADD /bin/ARG_OS/ARG_ARCH/ARG_BIN /ARG_BIN
+RUN apk add --no-cache ca-certificates
+
+ADD /bin/linux/amd64/ark /ark
 
 USER nobody:nobody
-ENTRYPOINT ["/ARG_BIN"]
+
+ENTRYPOINT ["/ark"]
