--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,6 +22,9 @@
 
 required = [
   "k8s.io/code-generator/cmd/client-gen",
+  # needed by generated clientsets, but not an explicit dep in client-gen itself
+  "k8s.io/apimachinery/pkg/apimachinery/registered",
+
   "k8s.io/code-generator/cmd/deepcopy-gen",
   "k8s.io/code-generator/cmd/defaulter-gen",
   "k8s.io/code-generator/cmd/lister-gen",
