add github.com/hashicorp/go-plugin dependency
Signed-off-by: Steve Kriss <steve@heptio.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -114,3 +114,7 @@ required = [
 [[override]]
   name = "k8s.io/gengo"
   revision = "9e661e9308f078838e266cca1c673922088c0ea4"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/hashicorp/go-plugin"
