--- a/examples/minio/10-ark-config.yaml
+++ b/examples/minio/10-ark-config.yaml
@@ -23,7 +23,7 @@ backupStorageProvider:
   bucket: ark
   config:
     region: minio
-    s3ForcePathStyle: true
+    s3ForcePathStyle: "true"
     s3Url: http://minio:9000
 backupSyncPeriod: 1m
 gcSyncPeriod: 1m
