add plugin add/remove commands
Signed-off-by: Steve Kriss <steve@heptio.com>

--- a/examples/azure/00-ark-deployment.yaml
+++ b/examples/azure/00-ark-deployment.yaml
@@ -37,3 +37,9 @@ spec:
           envFrom:
             - secretRef:
                 name: cloud-credentials
+          volumeMounts:
+          - name: plugins
+            mountPath: /plugins
+      volumes:
+        - name: plugins
+          emptyDir: {}
