--- a/contribution/ark-server/values.yaml
+++ b/contribution/ark-server/values.yaml
@@ -22,6 +22,20 @@ service:
   type: ClusterIP
   port: 80
 
+
+
+rbac:
+  create: true
+
+serviceAccount:
+  deploy:
+    create: true
+    name: deploy-ark
+  server:
+    create: true
+    name: heptio-ark
+
+
 ingress:
   enabled: false
   annotations: {}
