--- a/contribution/ark-server/templates/install.yaml
+++ b/contribution/ark-server/templates/install.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: deploy-ark
+  namespace: heptio-ark
   annotations:
     "helm.sh/hook": post-install
     "helm.sh/hook-delete-policy": hook-succeeded
@@ -9,6 +10,7 @@ spec:
   template:
     metadata:
       name: deploy-ark
+      namespace: heptio-ark
     spec:
       restartPolicy: Never
       containers:
