--- a/contribution/ark-server/templates/configmap.yaml
+++ b/contribution/ark-server/templates/configmap.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ark-server-config
+  namespace: heptio-ark
 data:
 {{ (tpl (.Files.Glob "static/*").AsConfig .) | indent 2 }}
