uses heptio-ark namespace as it is required

--- a/contribution/ark-server/templates/install.yaml
+++ b/contribution/ark-server/templates/install.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: deploy-ark
-  namespace: heptio-ark
+  namespace: {{ .Values.namespace.name }}
   annotations:
     "helm.sh/hook": post-install
     "helm.sh/hook-delete-policy": hook-succeeded
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       name: deploy-ark
-      namespace: heptio-ark
+      namespace: {{ .Values.namespace.name }}
     spec:
       restartPolicy: Never
       containers:
