--- a/contribution/ark-server/templates/00-prereqs.yaml
+++ b/contribution/ark-server/templates/00-prereqs.yaml
@@ -1,3 +1,11 @@
+{{- if .Values.namespace.create }}
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: {{ .Values.namespace.name }}
+{{- end }}
+
+---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -97,7 +105,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ark
-  namespace: {{ .Values.configuration.namespace }}
+  namespace: {{ .Values.namespace.name }}
   labels:
     component: ark
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
@@ -118,7 +126,7 @@ metadata:
     app: {{ template "ark-server.name" . }}
 subjects:
   - kind: ServiceAccount
-    namespace: {{ .Values.configuration.namespace }}
+    namespace: {{ .Values.namespace.name }}
     name: ark
 roleRef:
   kind: ClusterRole
@@ -129,7 +137,7 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
-  namespace: {{ .Values.configuration.namespace }}
+  namespace: {{ .Values.namespace.name }}
   name: ark
   labels:
     component: ark
@@ -149,7 +157,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
-  namespace: {{ .Values.configuration.namespace }}
+  namespace: {{ .Values.namespace.name }}
   name: ark
   labels:
     component: ark
@@ -159,7 +167,7 @@ metadata:
     app: {{ template "ark-server.name" . }}
 subjects:
   - kind: ServiceAccount
-    namespace: {{ .Values.configuration.namespace }}
+    namespace: {{ .Values.namespace.name }}
     name: ark
 roleRef:
   kind: Role
@@ -171,7 +179,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "ark-server.deploySA" . }}
-  namespace: {{ .Values.configuration.namespace }}
+  namespace: {{ .Values.namespace.name }}
   labels:
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
@@ -201,7 +209,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
   name: deploy-ark
-  namespace: {{ .Values.configuration.namespace }}
+  namespace: {{ .Values.namespace.name }}
   labels:
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
@@ -214,5 +222,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ template "ark-server.deploySA" . }}
-  namespace: {{ .Values.configuration.namespace }}
+  namespace: {{ .Values.namespace.name }}
 {{- end }}
