--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ name: ark
 baseurl: /ark
 latest: "v0.7.0"
 versions:
+  - "v0.7.1"
   - "v0.7.0"
   - "v0.6.0"
   - "v0.5.0"
@@ -29,6 +30,11 @@ defaults:
     values:
       version: "master"
       gh: https://github.com/heptio/ark/tree/master
+  - scope:
+      path: "v0.7.1"
+    values:
+      version: "v0.7.1"
+      gh: https://github.com/heptio/ark/tree/v0.7.1
   - scope:
       path: "v0.7.0"
     values:
