Update dep info
- Add pruning settings to Gopkg.toml
- Update vendoring deps doc to point to dep installation instructions
  and to use dep instead of hack/dep-save.sh
- Remove hack/dep-save.sh

Signed-off-by: Andy Goldstein <andy.goldstein@gmail.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,6 +31,11 @@ required = [
   "k8s.io/code-generator/cmd/informer-gen",
 ]
 
+[prune]
+  unused-packages = true
+  non-go = true
+  go-tests = true
+
 [[constraint]]
   name = "cloud.google.com/go"
   version = "0.11.0"
