--- a/examples/azure/00-ark-deployment.yaml
+++ b/examples/azure/00-ark-deployment.yaml
@@ -16,7 +16,7 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  namespace: heptio-ark-server
+  namespace: heptio-ark
   name: ark
 spec:
   replicas: 1
@@ -32,8 +32,6 @@ spec:
           image: gcr.io/heptio-images/ark:latest
           command:
             - /ark
-            - --namespace
-            - heptio-ark
           args:
             - server
           envFrom:
