--- a/examples/common/10-deployment.yaml
+++ b/examples/common/10-deployment.yaml
@@ -16,7 +16,7 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  namespace: heptio-ark-server
+  namespace: heptio-ark
   name: ark
 spec:
   replicas: 1
@@ -34,8 +34,6 @@ spec:
             - /ark
           args:
             - server
-            - --namespace
-            - heptio-ark
           volumeMounts:
             - name: cloud-credentials
               mountPath: /credentials
