Reverting namespace to single namespace deployment
Signed-off-by: Josh Hull <josh.hull@lypht.com>

--- a/examples/gcp/10-deployment.yaml
+++ b/examples/gcp/10-deployment.yaml
@@ -16,7 +16,7 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  namespace: heptio-ark-server
+  namespace: heptio-ark
   name: ark
 spec:
   replicas: 1
