--- a/_config.yml
+++ b/_config.yml
@@ -1,64 +1,64 @@
 name: ark
 baseurl: /ark
-latest: "v0.7.1"
-versions:
-  - "v0.7.1"
-  - "v0.7.0"
-  - "v0.6.0"
-  - "v0.5.0"
-  - "v0.4.0"
-  - "v0.3.0"
 google_analytics: FILL_OUT
+latest: v0.8.0
+versions:
+- v0.8.0
+- v0.7.1
+- v0.7.0
+- v0.6.0
+- v0.5.0
+- v0.4.0
+- v0.3.0
 versioning: true
-
 logo: assets/img/logo.svg
-
 exclude:
-  - gen_version.sh
+- gen_version.sh
 plugins:
-  - jekyll-redirect-from
-
+- jekyll-redirect-from
 contact:
   google: https://groups.google.com/forum/#!forum/heptio-ark
   github: https://github.com/heptio/ark
   twitter: https://twitter.com/heptioark
   slack: https://kubernetes.slack.com/messages/ark
-
 defaults:
-  - scope:
-      path: "master"
-    values:
-      version: "master"
-      gh: https://github.com/heptio/ark/tree/master
-  - scope:
-      path: "v0.7.1"
-    values:
-      version: "v0.7.1"
-      gh: https://github.com/heptio/ark/tree/v0.7.1
-  - scope:
-      path: "v0.7.0"
-    values:
-      version: "v0.7.0"
-      gh: https://github.com/heptio/ark/tree/v0.7.0
-  - scope:
-      path: "v0.6.0"
-    values:
-      version: "v0.6.0"
-      gh: https://github.com/heptio/ark/tree/v0.6.0
-  - scope:
-      path: "v0.5.0"
-    values:
-      version: "v0.5.0"
-      gh: https://github.com/heptio/ark/tree/v0.5.0
-  - scope:
-      path: "v0.4.0"
-    values:
-      version: "v0.4.0"
-      gh: https://github.com/heptio/ark/tree/v0.4.0
-  - scope:
-      path: "v0.3.0"
-    values:
-      version: "v0.3.0"
-      gh: https://github.com/heptio/ark/tree/v0.3.0
-
-theme: jekyll-theme-minimal
+- scope:
+    path: master
+  values:
+    version: master
+    gh: https://github.com/heptio/ark/tree/master
+- scope:
+    path: v0.8.0
+  values:
+    version: v0.8.0
+    gh: https:/github.com/heptio/ark/tree/v0.8.0
+- scope:
+    path: v0.7.1
+  values:
+    version: v0.7.1
+    gh: https://github.com/heptio/ark/tree/v0.7.1
+- scope:
+    path: v0.7.0
+  values:
+    version: v0.7.0
+    gh: https://github.com/heptio/ark/tree/v0.7.0
+- scope:
+    path: v0.6.0
+  values:
+    version: v0.6.0
+    gh: https://github.com/heptio/ark/tree/v0.6.0
+- scope:
+    path: v0.5.0
+  values:
+    version: v0.5.0
+    gh: https://github.com/heptio/ark/tree/v0.5.0
+- scope:
+    path: v0.4.0
+  values:
+    version: v0.4.0
+    gh: https://github.com/heptio/ark/tree/v0.4.0
+- scope:
+    path: v0.3.0
+  values:
+    version: v0.3.0
+    gh: https://github.com/heptio/ark/tree/v0.3.0
