Refactor plugin management
Refactor plugin management:
- support multiple plugins per executable
- support restarting a plugin process in the event it terminates
- simplify plugin lifecycle management by using separate managers for
  each scope (server vs backup vs restore)

Signed-off-by: Andy Goldstein <andy.goldstein@gmail.com>

--- a/examples/gcp/00-ark-config.yaml
+++ b/examples/gcp/00-ark-config.yaml
@@ -22,8 +22,8 @@ persistentVolumeProvider:
   name: gcp
 backupStorageProvider:
   name: gcp
-  bucket: <YOUR_BUCKET>
-backupSyncPeriod: 30m
+  bucket: andy-heptio-ark-data
+backupSyncPeriod: 1m
 gcSyncPeriod: 30m
 scheduleSyncPeriod: 1m
 restoreOnlyMode: false
