rename ark daemonset to ark restic server
Signed-off-by: Steve Kriss <steve@heptio.com>

--- a/examples/aws/20-restic-daemonset.yaml
+++ b/examples/aws/20-restic-daemonset.yaml
@@ -42,7 +42,8 @@ spec:
           command:
             - /ark
           args:
-            - daemonset
+            - restic 
+            - server
           volumeMounts:
             - name: cloud-credentials
               mountPath: /credentials
