expose container ports in example deployment and pkg/install tooling
Signed-off-by: Ashish Amarnath <ashish.amarnath@gmail.com>

--- a/examples/aws/10-deployment-kube2iam.yaml
+++ b/examples/aws/10-deployment-kube2iam.yaml
@@ -35,6 +35,9 @@ spec:
       containers:
         - name: ark
           image: gcr.io/heptio-images/ark:latest
+          ports:
+            - name: metrics
+              containerPort: 8085
           command:
             - /ark
           args:
