--- a/examples/gcp/10-deployment.yaml
+++ b/examples/gcp/10-deployment.yaml
@@ -34,6 +34,9 @@ spec:
       containers:
         - name: ark
           image: gcr.io/heptio-images/ark:latest
+          ports:
+            - name: metrics
+              containerPort: 8085
           command:
             - /ark
           args:
