--- a/Dockerfile-ark.alpine
+++ b/Dockerfile-ark.alpine
@@ -21,8 +21,8 @@ RUN apk add --no-cache ca-certificates
 RUN apk add --update --no-cache bzip2 && \
     wget --quiet https://github.com/restic/restic/releases/download/v0.9.1/restic_0.9.1_linux_amd64.bz2 && \
     bunzip2 restic_0.9.1_linux_amd64.bz2 && \
-    mv restic_0.9.1_linux_amd64 /restic && \
-    chmod +x /restic
+    mv restic_0.9.1_linux_amd64 /usr/bin/restic && \
+    chmod +x /usr/bin/restic
 
 ADD /bin/linux/amd64/ark /ark
 
