add a /scratch emptyDir to ark pods to use for restic cache
Signed-off-by: Steve Kriss <steve@heptio.com>

--- a/examples/aws/10-deployment.yaml
+++ b/examples/aws/10-deployment.yaml
@@ -43,12 +43,18 @@ spec:
               mountPath: /credentials
             - name: plugins
               mountPath: /plugins
+            - name: scratch
+              mountPath: /scratch
           env:
             - name: AWS_SHARED_CREDENTIALS_FILE
               value: /credentials/cloud
+            - name: ARK_SCRATCH_DIR
+              value: /scratch
       volumes:
         - name: cloud-credentials
           secret:
             secretName: cloud-credentials
         - name: plugins
+          emptyDir: {}
+        - name: scratch
           emptyDir: {}
