--- a/examples/gcp/10-deployment.yaml
+++ b/examples/gcp/10-deployment.yaml
@@ -46,12 +46,18 @@ spec:
               mountPath: /credentials
             - name: plugins
               mountPath: /plugins
+            - name: scratch
+              mountPath: /scratch
           env:
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: /credentials/cloud
+            - name: ARK_SCRATCH_DIR
+              value: /scratch
       volumes:
         - name: cloud-credentials
           secret:
             secretName: cloud-credentials
         - name: plugins
+          emptyDir: {}
+        - name: scratch
           emptyDir: {}
