restic: use HostToContainer mount prop. for host-pods volume
Signed-off-by: Steve Kriss <steve@heptio.com>

--- a/examples/aws/20-restic-daemonset.yaml
+++ b/examples/aws/20-restic-daemonset.yaml
@@ -51,6 +51,7 @@ spec:
               mountPath: /credentials
             - name: host-pods
               mountPath: /host_pods
+              mountPropagation: HostToContainer
             - name: scratch
               mountPath: /scratch
           env:
