--- a/examples/azure/20-restic-daemonset.yaml
+++ b/examples/azure/20-restic-daemonset.yaml
@@ -46,6 +46,7 @@ spec:
           volumeMounts:
             - name: host-pods
               mountPath: /host_pods
+              mountPropagation: HostToContainer
             - name: scratch
               mountPath: /scratch
           envFrom:
