--- a/examples/gcp/20-restic-daemonset.yaml
+++ b/examples/gcp/20-restic-daemonset.yaml
@@ -51,6 +51,7 @@ spec:
               mountPath: /credentials
             - name: host-pods
               mountPath: /host_pods
+              mountPropagation: HostToContainer
             - name: scratch
               mountPath: /scratch
           env:
