--- a/examples/aws/00-ark-config.yaml
+++ b/examples/aws/00-ark-config.yaml
@@ -25,6 +25,12 @@ persistentVolumeProvider:
 backupStorageProvider:
   name: aws
   bucket: <YOUR_BUCKET>
+  # Uncomment the below line to enable restic integration.
+  # The format for resticLocation is <bucket>[/<prefix>],
+  # e.g. "my-restic-bucket" or "my-restic-bucket/repos".
+  # This MUST be a different bucket than the main Ark bucket
+  # specified just above.
+  # resticLocation: <YOUR_RESTIC_LOCATION>
   config:
     region: <YOUR_REGION>
 backupSyncPeriod: 30m
