--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 name: ark
 baseurl: /ark
 google_analytics: FILL_OUT
-latest: v0.8.1
+latest: v0.9.0
 versions:
+- v0.9.0
 - v0.8.1
 - v0.8.0
 - v0.7.1
@@ -28,6 +29,11 @@ defaults:
   values:
     version: master
     gh: https://github.com/heptio/ark/tree/master
+- scope:
+    path: v0.9.0
+  values:
+    version: v0.9.0
+    gh: https:/github.com/heptio/ark/tree/v0.9.0
 - scope:
     path: v0.8.1
   values:
