--- a/_data/toc-mapping.yml
+++ b/_data/toc-mapping.yml
@@ -9,7 +9,8 @@
 # v0.11.0: default
 # v0.12.0: default
 
-master: v8-1-toc
+master: v9-toc
+v0.9.0: v9-toc
 v0.8.1: v8-1-toc
 v0.8.0: v8-toc
 v0.7.1: v7-1-toc
