--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -115,7 +115,7 @@
 
 [[constraint]]
   name = "github.com/stretchr/testify"
-  branch = "master"
+  version = "~1.2.2"
 
 [[constraint]]
   name = "github.com/hashicorp/go-plugin"
