--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -107,7 +107,7 @@
 
 [[constraint]]
   name = "github.com/spf13/cobra"
-  branch = "master"
+  version = "0.0.3"
 
 [[constraint]]
   name = "github.com/spf13/pflag"
