add content for issue 994
Signed-off-by: JENNIFER RONDEAU <jrondeau@heptio.com>

--- a/examples/azure/00-ark-deployment.yaml
+++ b/examples/azure/00-ark-deployment.yaml
@@ -41,6 +41,8 @@ spec:
             - /ark
           args:
             - server
+            ## uncomment following line and specify values if needed for multiple provider snapshot locations
+            # - --default-volume-snapshot-locations=<provider-1:location-1,provider-2:location-2,...>
           envFrom:
             - secretRef:
                 name: cloud-credentials
