--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 name: ark
 baseurl: /ark
 google_analytics: FILL_OUT
-latest: v0.9.0
+latest: v0.10.0
 versions:
-- v0.10.0-beta.1
+- v0.10.0
 - v0.9.0
 - v0.8.1
 - v0.8.0
@@ -31,10 +31,10 @@ defaults:
     version: master
     gh: https://github.com/heptio/ark/tree/master
 - scope:
-    path: v0.10.0-beta.1
+    path: v0.10.0
   values:
-    version: v0.10.0-beta.1
-    gh: https:/github.com/heptio/ark/tree/v0.10.0-beta.1
+    version: v0.10.0
+    gh: https:/github.com/heptio/ark/tree/v0.10.0
 - scope:
     path: v0.9.0
   values:
