--- a/_data/toc-mapping.yml
+++ b/_data/toc-mapping.yml
@@ -10,7 +10,7 @@
 # v0.12.0: default
 
 master: v010-toc
-v0.10.0-beta.1: v010-toc
+v0.10.0: v010-toc
 v0.9.0: v9-toc
 v0.8.1: v8-1-toc
 v0.8.0: v8-toc
