Openstack Example updates and README
Signed-off-by: Derek Lemon -T (delemon - AEROTEK INC at Cisco) <delemon@cisco.com>

--- a/examples/openstack/00-ark-deployment.yaml
+++ b/examples/openstack/00-ark-deployment.yaml
@@ -32,7 +32,7 @@ spec:
       serviceAccountName: ark
       containers:
         - name: ark
-          image: drekle/ark:latest
+          image: gcr.io/heptio-images/ark:latest
           ports:
             - name: metrics
               containerPort: 8085
