Update docs for v0.11
Signed-off-by: Carlisia <carlisiac@vmware.com>

--- a/_data/toc-mapping.yml
+++ b/_data/toc-mapping.yml
@@ -1,20 +1,9 @@
 # This file can be used to explicitly map a release to a specific table-of-contents
 # (TOC). You'll want to use this after any revamps to information architecture, to ensure
 # that the navigation for older versions still work.
-#
-# NOTA BENE FOR RELEASES AFTER 0.10: start with master-toc.yml to create the new TOC.
-# This is a break with previous TOC practice. IFF you make no other changes to the doc structure,
-# then rename master-toc.yml to v011-toc.yml, and change the mapping for the master branch here also.
-# Then you'll be back on track with previous practice and you can delete this comment (lines 5-8).
-#
-# Below is a commented out example of what this may look like:
-
-# v0.9.0: old
-# # v0.10.0 is unspecified, so it uses the toc under default.yml
-# v0.11.0: default
-# v0.12.0: default
 
 master: master-toc
+v0.11.0: v011-toc
 v0.10.0: v010-toc
 v0.9.0: v9-toc
 v0.8.1: v8-1-toc
