--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 name: velero
 baseurl: /velero
 google_analytics: FILL_OUT
-latest: v0.10.0
+latest: v0.11.0
 versions:
+- v0.11.0
 - v0.10.0
 - v0.9.0
 - v0.8.1
@@ -30,6 +31,11 @@ defaults:
   values:
     version: master
     gh: https://github.com/heptio/velero/tree/master
+- scope:
+    path: v0.11.0
+  values:
+    version: v0.11.0
+    gh: https:/github.com/heptio/velero/tree/v0.11.0
 - scope:
     path: v0.10.0
   values:
